crates/nidus/tests/ui/route_empty_param_path.rs
use nidus::prelude::*;

struct UsersController;

#[routes]
impl UsersController {
    #[get("/:")]
    async fn find_one(&self) {}
}

fn main() {}
